--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                 // 如果输入为空，隐藏验证消息
                 keyValidationMessage.className = 'key-validation';
                 keyValidationMessage.textContent = '';
-            } else if (key === '114514') {
+            } else if (key === '王顺荃死全家') {
                 // 如果秘钥正确
                 keyValidationMessage.className = 'key-validation correct';
                 keyValidationMessage.innerHTML = '<i class="fas fa-check-circle"></i> 秘钥正确';
